# PixyPilot

./: .env.example  .gitignore  PIXY_NOTES.md  README.md
backend/: pyproject.toml
backend/src/pixypilot/: __init__.py  config.py  main.py  run.py
backend/src/pixypilot/api/: routes.py
backend/src/pixypilot/core/: commands.py
backend/src/pixypilot/domains/audio/: models.py  service.py
backend/src/pixypilot/domains/control_presets/: __init__.py  models.py  service.py
backend/src/pixypilot/domains/devices/: __init__.py  models.py
backend/src/pixypilot/domains/hotplug/: __init__.py  models.py  service.py
backend/src/pixypilot/domains/pcap_import/: models.py  service.py
backend/src/pixypilot/domains/pixy_hid/: __init__.py  commands.py  models.py  service.py
backend/src/pixypilot/domains/settings/: models.py  service.py
backend/src/pixypilot/domains/uvc_extension/: __init__.py  models.py  service.py
backend/src/pixypilot/domains/v4l2/: __init__.py  models.py  native.py  parser.py  service.py
backend/src/pixypilot/domains/video/: __init__.py  models.py  native_mjpeg.py  service.py
backend/src/pixypilot/tests/: test_audio_service.py  test_config.py  test_control_preset_service.py  test_hotplug_service.py  test_pcap_import_service.py  test_pixy_hid_commands.py  test_pixy_hid_service.py  test_settings_service.py  test_uvc_extension_service.py  test_v4l2_native.py  test_v4l2_parser.py  test_v4l2_service.py  test_video_service.py
config/: pixypilot.yaml
docs/: CONFIGURATION.md  EMEET_PIXY_HID_REFERENCE.md  EMEET_PIXY_REVERSE_ENGINEERING.md  ROADMAP.md  (+3 more)
(+77 files in other folders)
