[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixypilot-backend"
version = "0.1.0"
description = "Local FastAPI backend for EMEET PIXY camera controls"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.2",
]

[project.scripts]
pixypilot-api = "pixypilot.run:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/pixypilot/tests"]
asyncio_mode = "auto"
